fix spacing on small devices and fix sticky sidebar

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,3 +23,8 @@ body {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
+.sticky-sidebar {
+	top: 65px;
+	z-index: 1010;
+}
